@@ -109,3 +109,7 @@
 [:function, :COUNT, [:array, [:row, [:blank], [:inlined_blank], [:number, 1]]]]	[:number, 1]
 [:function, :LEN, [:inlined_blank]]	[:number, 0]
 [:function, :RIGHT, [:inlined_blank], [:number, 1]]	[:string, ""]
+
+# Partially map SUMIFS if criteria are all provided
+[:function, :SUMIFS, [:array, [:row, [:cell, :A1]], [:row, [:cell, :A2]]], [:array, [:row, [:string, "A"]], [:row, [:cell, :B10]]], [:string, "B"]]	[:function, :SUMIFS, [:array, [:row, [:cell, :A1]], [:row, [:cell, :A2]]], [:array, [:row, [:string, "A"]], [:row, [:cell, :B10]]], [:string, "B"]]
+[:function, :SUMIFS, [:array, [:row, [:cell, :A1]], [:row, [:cell, :A2]]], [:array, [:row, [:string, "A"]], [:row, [:string, "B"]]], [:string, "B"]]	[:function, :SUM, [:cell, :A2]]
